Add ecdh Add ec key handling